# gtrends

./: Cargo.toml  README.md  about.html  another_keywords.json  another_keywords2.json  comands.txt  index copy 2.html  index.html  keywords.json  use.html
examples/: chart.rs
src/: chart.rs  handler.rs  main.rs  trend_request.rs
