[package]
name = "gtrends"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
serde_json = "1.0.82"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
serde = { version = "1.0.142", features = ["derive"] }
plotters = "0.3.2"
chrono = "0.4.22"
rand = "0.8.5"
